compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__return_errors__return_type_mismatch.snap
---
source: compiler-core/src/type_/tests/return_errors.rs
expression: "\npub fn main() -> Int {\n  $return \"not an int\"\n}\n"
---
----- SOURCE CODE

pub fn main() -> Int {
  $return "not an int"
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:3
  │
3 │   $return "not an int"
  │   ^^^^^^^^^^^^^^^^^^^^

Expected type:

    Int

Found type:

    String
